hphp/test/slow/fast_intercept2/intercept-inout-handler-error.php.expectf
Fatal error: fb_intercept2 used with an inout handler with a bad signature (expected parameter three to be inout) in %s on line 12
